--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     modules
 
 VERSION
-    version 0.02
+    version 0.04
 
 SYNOPSIS
         use Acme::CPANAuthors;
@@ -30,7 +30,6 @@ CONTAINED AUTHORS
       ANDK => q[Andreas J. Koenig],
       ANDYA => q[Andy Armstrong],
       AUDREYT => q[Audrey Tang],
-      BDFOY => q[brian d foy],
       BINGOS => q[Chris Williams],
       CHORNY => q[Alexandr Ciornii],
       CORION => q[Max Maischein],
@@ -88,6 +87,7 @@ CONTAINED AUTHORS
       TODDR => q[Todd Rinaldo],
       TOMHUGHES => q[Tom Hughes],
       YVES => q[Yves],
+      ZEFRAM => q[Andrew Main (Zefram)],
 
 SEE ALSO
     Acme::CPANAuthors
