--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     modules
 
 VERSION
-    version 0.06
+    version 0.08
 
 SYNOPSIS
         use Acme::CPANAuthors;
@@ -61,6 +61,7 @@ CONTAINED AUTHORS
       MSCHWERN => q[Michael G Schwern],
       MSERGEANT => q[MSERGEANT],
       MSHELOR => q[Mark Shelor],
+      MSTROUT => q[Matt S Trout],
       MUIR => q[David Muir Sharnoff],
       NWCLARK => q[Nicholas Clark],
       PETDANCE => q[Andy Lester],
