--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     modules
 
 VERSION
-    version 0.10
+    version 0.12
 
 SYNOPSIS
         use Acme::CPANAuthors;
@@ -58,14 +58,13 @@ CONTAINED AUTHORS
       MARKM => q[Mark Mielke],
       MARKSTOS => q[Mark Stosberg],
       MHX => q[Marcus Holland-Moritz],
-      MJD => q[Mark Jason Dominus],
       MSCHWERN => q[Michael G Schwern],
       MSERGEANT => q[MSERGEANT],
       MSHELOR => q[Mark Shelor],
-      MSTROUT => q[Matt S Trout],
       MUIR => q[David Muir Sharnoff],
       NWCLARK => q[Nicholas Clark],
       PETDANCE => q[Andy Lester],
+      PEVANS => q[Paul Evans],
       PJACKLAM => q[Peter John Acklam],
       PJF => q[Paul Jamieson Fenwick],
       PMQS => q[Paul Marquess],
@@ -79,6 +78,7 @@ CONTAINED AUTHORS
       SAPER => q[Sebastien Aperghis-Tramoni],
       SBECK => q[Sullivan Beck],
       SBURKE => q[Sean M. Burke],
+      SHAY => q[Steve Hay],
       SIMONW => q[Simon Wistow],
       SMPETERS => q[Steve Peters],
       SMUELLER => q[Steffen Mueller],
@@ -97,7 +97,7 @@ AUTHOR
     Chris Williams
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2011 by Chris Williams.
+    This software is copyright (c) 2012 by Chris Williams.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
