--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     modules
 
 VERSION
-    version 0.14
+    version 0.16
 
 SYNOPSIS
         use Acme::CPANAuthors;
@@ -30,7 +30,6 @@ CONTAINED AUTHORS
       ANDK => q[Andreas J. Koenig],
       ANDYA => q[Andy Armstrong],
       AUDREYT => q[Audrey Tang],
-      BDFOY => q[brian d foy],
       BINGOS => q[Chris Williams],
       CHORNY => q[Alexandr Ciornii],
       CORION => q[Max Maischein],
@@ -61,11 +60,13 @@ CONTAINED AUTHORS
       MARKM => q[Mark Mielke],
       MARKSTOS => q[Mark Stosberg],
       MHX => q[Marcus Holland-Moritz],
+      MJD => q[Mark Jason Dominus],
       MSCHWERN => q[Michael G Schwern],
       MSERGEANT => q[MSERGEANT],
       MSHELOR => q[Mark Shelor],
       MUIR => q[David Muir Sharnoff],
       NWCLARK => q[Nicholas Clark],
+      OVID => q[Curtis 'Ovid' Poe],
       PETDANCE => q[Andy Lester],
       PEVANS => q[Paul Evans],
       PJACKLAM => q[Peter John Acklam],
