--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     modules
 
 VERSION
-    version 0.16
+    version 0.18
 
 SYNOPSIS
         use Acme::CPANAuthors;
@@ -29,6 +29,7 @@ CONTAINED AUTHORS
       AMS => q[Abhijit Menon-Sen],
       ANDK => q[Andreas J. Koenig],
       ANDYA => q[Andy Armstrong],
+      APEIRON => q[Chris Nehren],
       AUDREYT => q[Audrey Tang],
       BINGOS => q[Chris Williams],
       CHORNY => q[Alexandr Ciornii],
@@ -37,6 +38,7 @@ CONTAINED AUTHORS
       DANKOGAI => q[Dan Kogai],
       DAPM => q[David A P Mitchell],
       DLAND => q[David Landgren],
+      DROLSKY => q[Dave Rolsky],
       DWHEELER => q[David E. Wheeler],
       ELIZABETH => q[Elizabeth Mattijsen],
       FERREIRA => q[Adriano Ferreira],
