--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     modules
 
 VERSION
-    version 0.24
+    version 0.26
 
 SYNOPSIS
         use Acme::CPANAuthors;
@@ -29,9 +29,9 @@ CONTAINED AUTHORS
       AMS => q[Abhijit Menon-Sen],
       ANDK => q[Andreas J. Koenig],
       ANDYA => q[Andy Armstrong],
-      APEIRON => q[Chris Nehren],
       AUDREYT => q[Audrey Tang],
       BINGOS => q[Chris Williams],
+      BOBTFISH => q[Tomas Doran],
       CHORNY => q[Alexandr Ciornii],
       CORION => q[Max Maischein],
       DAGOLDEN => q[David Golden],
@@ -55,7 +55,6 @@ CONTAINED AUTHORS
       JSTOWE => q[Jonathan Stowe],
       JV => q[Johan Vromans],
       KANE => q[Jos Boumans],
-      LBROCARD => q[Leon Brocard],
       LEONT => q[Leon Timmermans],
       LLAP => q[Leo Lapworth],
       MAKAMAKA => q[Makamaka Hannyaharamitu],
@@ -85,7 +84,6 @@ CONTAINED AUTHORS
       SAPER => q[Sebastien Aperghis-Tramoni],
       SBECK => q[Sullivan Beck],
       SBURKE => q[Sean M. Burke],
-      SHAY => q[Steve Hay],
       SIMONW => q[Simon Wistow],
       SMPETERS => q[Steve Peters],
       SMUELLER => q[Steffen Mueller],
