--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     modules
 
 VERSION
-    version 0.30
+    version 0.32
 
 SYNOPSIS
         use Acme::CPANAuthors;
@@ -67,6 +67,7 @@ CONTAINED AUTHORS
       MSCHWERN => q[Michael G Schwern],
       MSHELOR => q[Mark Shelor],
       MUIR => q[David Muir Sharnoff],
+      NEILB => q[Neil Bowers],
       NWCLARK => q[Nicholas Clark],
       OVID => q[Curtis 'Ovid' Poe],
       PEVANS => q[Paul Evans],
@@ -82,7 +83,6 @@ CONTAINED AUTHORS
       SALVA => q[Salvador Fandino Garcia],
       SAPER => q[Sebastien Aperghis-Tramoni],
       SBECK => q[Sullivan Beck],
-      SBURKE => q[Sean M. Burke],
       SHAY => q[Steve Hay],
       SIMONW => q[Simon Wistow],
       SMPETERS => q[Steve Peters],
@@ -102,7 +102,7 @@ AUTHOR
     Chris Williams
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2013 by Chris Williams.
+    This software is copyright (c) 2014 by Chris Williams.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
