Import of BINGOS/Acme-CPANAuthors-DualLife-0.34 from CPAN.
gitpan-cpan-distribution: Acme-CPANAuthors-DualLife
gitpan-cpan-version:      0.34
gitpan-cpan-path:         BINGOS/Acme-CPANAuthors-DualLife-0.34.tar.gz
gitpan-cpan-author:       BINGOS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     modules
 
 VERSION
-    version 0.32
+    version 0.34
 
 SYNOPSIS
         use Acme::CPANAuthors;
@@ -43,6 +43,7 @@ CONTAINED AUTHORS
       DWHEELER => q[David E. Wheeler],
       ELIZABETH => q[Elizabeth Mattijsen],
       ETHER => q[Karen Etheridge],
+      EXODIST => q[Chad Granum],
       FERREIRA => q[Adriano Ferreira],
       FLORA => q[Florian Ragwitz],
       GAAS => q[Gisle Aas],
@@ -90,7 +91,7 @@ CONTAINED AUTHORS
       TJENNESS => q[Tim Jenness],
       TODDR => q[Todd Rinaldo],
       TOMHUGHES => q[Tom Hughes],
-      YVES => q[Yves],
+      WOLFSAGE => q[Matthew Horsfall (alh)],
       ZEFRAM => q[Andrew Main (Zefram)],
 
 SEE ALSO
